fix navbar z-index

--- a/styles/navigation.scss
+++ b/styles/navigation.scss
@@ -11,6 +11,7 @@
 	top: 0;
 	left: 0;
 	background: $color-1;
+	z-index: 13;
 	box-shadow: 0px 0px 10px rgb(100, 100, 100);
 
 	&__container {
